Fix spacing for terms when either notice or checkbox is displayed

--- a/css/checkout-layout-120-dev-1.css
+++ b/css/checkout-layout-120-dev-1.css
@@ -911,7 +911,7 @@ body.woocommerce-checkout.has-checkout-header .wfc-content {
   border: solid 1px #D6D8D8;
   border-radius: 13px; }
 
-.woocommerce-privacy-policy-text {
+.woocommerce-privacy-policy-text:not(:last-child):not(:empty) {
   margin-bottom: 20px; }
 
 .woocommerce-terms-and-conditions {
